bluec-tests/tests/invalid/storage_class/file_scope_missing_identifiers.c
int 0;
int 1;

typedef 2;

int 3(void) {
    while (1) {
        int x = 0;
        {
            int y = 0;
        }
    }
    return 0;
}

x + y;

int 4(void) {
    while (1) {
        int x = 0;
        {
            int y = 0;
        }
    }
    return 0;
}

x + y;